--- a/lxr.conf
+++ b/lxr.conf
@@ -7,9 +7,9 @@
 # Define typed variable "a".  First value is default.
 #variable: a, Architecture, (-)
 
-# Define the base url for the LXR files. Tree name (if any) is appened
+# Define the base url for the LXR files. Tree name (if any) is appended
 # to this.
-baseurl: http://lxr.mozilla.org/
+baseurl: http://mxr.mozilla.org/
 
 # url prefix for bonsai 
 bonsaihome: http://bonsai.mozilla.org
@@ -23,6 +23,7 @@ htmldir:  template-dir
 sourcehead: template-source-head
 sourcedirhead: template-sourcedir-head
 
+identref: template-ident-fileref
 
 # If there's only one tree being indexed then allow this older
 # syntax for backward compatability. "sourceroot" should
@@ -31,14 +32,64 @@ sourcedirhead: template-sourcedir-head
 
 # If we're indexing more than one tree then include one sourceroot
 # entry per tree where each entry is a tree/directory pair.
-sourceroot: classic /lxr-root/lxr-data/classic/mozilla
-sourceroot: ef /lxr-root/lxr-data/ef/mozilla
-sourceroot: mozilla /lxr-root/lxr-data/mozilla/mozilla
-sourceroot: nspr /lxr-root/lxr-data/nspr/mozilla
-sourceroot: seamonkey /lxr-root/lxr-data/seamonkey/mozilla
-sourceroot: m10 /lxr-root/lxr-data/m10/mozilla
-sourceroot: grendel /lxr-root/lxr-data/grendel/mozilla
-sourceroot: gnome /lxr-root/lxr-data/gnome/gnome
+sourceroot: seamonkey /data/mxr-data/seamonkey/mozilla
+sourceprefix: seamonkey mozilla
+sourceroot: m10 /data/mxr-data/m10/mozilla
+sourceprefix: m10 mozilla
+sourceroot: classic /data/mxr-data/classic/mozilla
+sourceprefix: classic mozilla
+sourceroot: ef /data/mxr-data/ef/mozilla
+sourceprefix: ef mozilla
+sourceroot: mozilla /data/mxr-data/mozilla/mozilla
+sourceprefix: mozilla mozilla
+sourceroot: nspr /data/mxr-data/nspr/mozilla
+sourceprefix: nspr mozilla/nsprpub
+sourceroot: seamonkey /data/mxr-data/seamonkey/mozilla
+sourceprefix: seamonkey mozilla
+sourceroot: mozilla1.7 /data/mxr-data/mozilla1.7/mozilla
+sourceprefix: mozilla1.7 mozilla
+sourceroot: mozilla1.8 /data/mxr-data/mozilla1.8/mozilla
+sourceprefix: mozilla1.8 mozilla
+sourceroot: mozilla1.8.0 /data/mxr-data/mozilla1.8.0/mozilla
+sourceprefix: mozilla1.8.0 mozilla
+sourceroot: security /data/mxr-data/security/mozilla
+sourceprefix: security mozilla
+sourceroot: webtools /data/mxr-data/webtools/webtools
+sourceprefix: webtools mozilla/webtools
+sourceroot: bugzilla /data/mxr-data/bugzilla/bugzilla
+sourceprefix: bugzilla mozilla/webtools/bugzilla
+sourceroot: update1.0 /data/mxr-data/update1.0/update
+sourceprefix: update1.0 mozilla/webtools/update
+sourceroot: bugzilla2.18 /data/mxr-data/bugzilla2.18/bugzilla
+sourceprefix: bugzilla2.18 mozilla/webtools/bugzilla
+sourceroot: bugzilla2.20 /data/mxr-data/bugzilla2.20/bugzilla
+sourceprefix: bugzilla2.20 mozilla/webtools/bugzilla
+sourceroot: bugzilla2.22 /data/mxr-data/bugzilla2.22/bugzilla
+sourceprefix: bugzilla2.22 mozilla/webtools/bugzilla
+sourceroot: bugzilla3.0 /data/mxr-data/bugzilla3.0/bugzilla
+sourceprefix: bugzilla3.0 mozilla/webtools/bugzilla
+sourceroot: mailnews /data/mxr-data/mailnews/mozilla
+sourceprefix: mailnews mozilla
+sourceroot: aviarybranch /data/mxr-data/aviarybranch/mozilla
+sourceprefix: aviarybranch mozilla
+sourceroot: aviary101branch /data/mxr-data/aviary101branch/mozilla
+sourceprefix: aviary101branch mozilla
+sourceroot: l10n-aviarybranch /data/mxr-data/l10n-aviarybranch/mozilla
+sourceprefix: l10n-aviarybranch l10n/mozilla
+sourceroot: l10n /data/mxr-data/l10n/mozilla
+sourceprefix: l10n l10n/mozilla
+sourceroot: l10n-mozilla1.8 /data/mxr-data/l10n-mozilla1.8/mozilla
+sourceprefix: l10n-mozilla1.8 l10n/mozilla
+sourceroot: l10n-mozilla1.8.0 /data/mxr-data/l10n-mozilla1.8.0/mozilla
+sourceprefix: l10n-mozilla1.8.0 l10n/mozilla
+sourceroot: fuel /data/mxr-data/fuel/fuel
+sourceprefix: fuel mozilla/browser/fuel
+sourceroot: firefox /data/mxr-data/firefox/mozilla
+sourceprefix: firefox mozilla
+sourceroot: firefox2 /data/mxr-data/firefox2/mozilla
+sourceprefix: firefox2 mozilla
+sourceroot: mozillasvn /data/mxr-data/mozillasvn/svn.mozilla.org
+sourceprefix: mozillasvn svn.mozilla.org
 
 # name of the source.
 srcrootname: mozilla
@@ -51,17 +102,17 @@ virtroot:
 incprefix: /include
 
 # The database files go here.
-#dbdir: /opt/lxr-data/db
+#dbdir: /opt/mxr-data/db
 
 # If using multiple trees, give the parent directory containing
-# dirs for each tree. For mozilla, /lxr-root/lxr-data contains
+# dirs for each tree. For mozilla, /data/mxr-data contains
 # a directory for each tree. Each of these directories contains
 # the tree's databases, and a mozilla directory containing the
 # source.
-dbdir: /lxr-root/lxr-data
+dbdir: /data/mxr-data
 
 # Glimpse can be found here.
-glimpsebin: /opt/local/bin/glimpse
+glimpsebin: /usr/bin/glimpse
 
 # The power of regexps.  This is pretty Linux-specific, but quite
 # useful.  Tinker with it and see what it does.  (How's that for
