--- a/lxr.conf
+++ b/lxr.conf
@@ -9,7 +9,7 @@
 
 # Define the base url for the LXR files. Tree name (if any) is appended
 # to this.
-baseurl: http://mxr.mozilla.org/
+baseurl: http://mxr-stage.mozilla.org/
 
 # url prefix for bonsai 
 bonsaihome: http://bonsai.mozilla.org
@@ -84,12 +84,6 @@ sourceroot: l10n-mozilla1.8.0 /data/mxr-data/l10n-mozilla1.8.0/mozilla
 sourceprefix: l10n-mozilla1.8.0 l10n/mozilla
 sourceroot: fuel /data/mxr-data/fuel/fuel
 sourceprefix: fuel mozilla/browser/fuel
-sourceroot: firefox /data/mxr-data/firefox/mozilla
-sourceprefix: firefox mozilla
-sourceroot: firefox2 /data/mxr-data/firefox2/mozilla
-sourceprefix: firefox2 mozilla
-sourceroot: mozillasvn /data/mxr-data/mozillasvn/svn.mozilla.org
-sourceprefix: mozillasvn svn.mozilla.org
 
 # name of the source.
 srcrootname: mozilla
