Update mxr-stage config to match what's being deployed to production

--- a/lxr.conf
+++ b/lxr.conf
@@ -9,7 +9,7 @@
 
 # Define the base url for the LXR files. Tree name (if any) is appended
 # to this.
-baseurl: http://mxr-test.landfill.bugzilla.org/
+baseurl: http://mxr-stage.mozilla.org/
 
 # url prefix for bonsai 
 bonsaihome: http://bonsai.mozilla.org
@@ -32,86 +32,91 @@ identref: template-ident-fileref
 
 # If we're indexing more than one tree then include one sourceroot
 # entry per tree where each entry is a tree/directory pair.
-sourceroot: classic /var/www/html/mxr/lxr-root/lxr-data/classic/mozilla
-sourceprefix: classic mozilla
-sourceroot: ef /var/www/html/mxr/lxr-root/lxr-data/ef/mozilla
-sourceprefix: ef mozilla
-sourceroot: mozilla /var/www/html/mxr/lxr-root/lxr-data/mozilla/mozilla
-sourceprefix: mozilla mozilla
-sourceroot: mozilla1.0 /var/www/html/mxr/lxr-root/lxr-data/mozilla1.0/mozilla
-sourceprefix: mozilla1.0 mozilla
-sourceroot: mozilla1.0.x /var/www/html/mxr/lxr-root/lxr-data/mozilla1.0.x/mozilla
-sourceprefix: mozilla1.0.x mozilla
-sourceroot: mozilla1.4.x /var/www/html/mxr/lxr-root/lxr-data/mozilla1.4.x/mozilla
-sourceprefix: mozilla1.4.x mozilla
-sourceroot: mozilla1.7.x /var/www/html/mxr/lxr-root/lxr-data/mozilla1.7.x/mozilla
-sourceprefix: mozilla1.7.x mozilla
-sourceroot: mozilla1.8.x /var/www/html/mxr/lxr-root/lxr-data/mozilla1.8.x/mozilla
-sourceprefix: mozilla1.8.x mozilla
-sourceroot: mozilla1.8.0.x /var/www/html/mxr/lxr-root/lxr-data/mozilla1.8.0.x/mozilla
-sourceprefix: mozilla1.8.0.x mozilla
-sourceroot: aviarybranch /var/www/html/mxr/lxr-root/lxr-data/aviarybranch/mozilla
+
+#XXX: PLEASE KEEP THIS LIST IN ALPHABETICAL ORDER!!! :XXX#
+sourceroot: aviary101branch /data/mxr-data/aviary101branch/mozilla
+sourceprefix: aviary101branch mozilla
+sourceroot: aviarybranch /data/mxr-data/aviarybranch/mozilla
 sourceprefix: aviarybranch mozilla
-sourceroot: nspr /var/www/html/mxr/lxr-root/lxr-data/nspr/mozilla/nsprpub
-sourceprefix: nspr mozilla/nsprpub
-sourceroot: seamonkey /var/www/html/mxr/lxr-root/lxr-data/seamonkey/mozilla
-sourceprefix: seamonkey mozilla
-sourceroot: security /var/www/html/mxr/lxr-root/lxr-data/security/mozilla
-sourceprefix: security mozilla
-sourceroot: m10 /var/www/html/mxr/lxr-root/lxr-data/m10/mozilla
-sourceprefix: m10 mozilla
-sourceroot: l10n /var/www/html/mxr/lxr-root/lxr-data/l10n/l10n
-sourceprefix: l10n l10n
-sourceroot: l10n-mozilla1.8.x /var/www/html/mxr/lxr-root/lxr-data/l10n-mozilla1.8.x/l10n
-sourceprefix: l10n-mozilla1.8.x l10n
-sourceroot: l10n-mozilla1.8.0.x /var/www/html/mxr/lxr-root/lxr-data/l10n-mozilla1.8.0.x/l10n
-sourceprefix: l10n-mozilla1.8.0.x l10n
-sourceroot: l10n-aviarybranch /var/www/html/mxr/lxr-root/lxr-data/l10n-aviarybranch/l10n
-sourceprefix: l10n-aviarybranch l10n
-sourceroot: grendel /var/www/html/mxr/lxr-root/lxr-data/grendel/mozilla
-sourceprefix: grendel mozilla
-sourceroot: kazehakase /var/www/html/mxr/lxr-root/lxr-data/kazehakase/kazehakase
-sourceprefix: kazehakase sourceforge
-sourceroot: samba /var/www/html/mxr/lxr-root/lxr-data/samba/samba
-sourceprefix: samba samba
-sourceroot: samba-all /var/www/html/mxr/lxr-root/lxr-data/samba-all/samba
-sourceprefix: samba-all samba
-sourceroot: js /var/www/html/mxr/lxr-root/lxr-data/js/mozilla
-sourceprefix: js mozilla
-sourceroot: webtools /var/www/html/mxr/lxr-root/lxr-data/webtools/mozilla/webtools
-sourceprefix: webtools mozilla/webtools
-sourceroot: mxr-test /var/www/html/mxr-test
-sourceprefix: mxr-test mozilla/webtools/mxr-test
-sourceroot: mxr /var/www/html/mxr
-sourceprefix: mxr mozilla/webtools/mxr
-sourceroot: bugzilla /var/www/html/mxr/lxr-root/lxr-data/bugzilla/mozilla/webtools/bugzilla
+sourceroot: bugzilla /data/mxr-data/bugzilla/bugzilla
 sourceprefix: bugzilla mozilla/webtools/bugzilla
-sourceroot: bugzilla3.0.x /var/www/html/mxr/lxr-root/lxr-data/bugzilla3.0.x/mozilla/webtools/bugzilla
-sourceprefix: bugzilla3.0.x mozilla/webtools/bugzilla
-sourceroot: bugzilla2.22.x /var/www/html/mxr/lxr-root/lxr-data/bugzilla2.22.x/mozilla/webtools/bugzilla
-sourceprefix: bugzilla2.22.x mozilla/webtools/bugzilla
-sourceroot: bugzilla2.20.x /var/www/html/mxr/lxr-root/lxr-data/bugzilla2.20.x/mozilla/webtools/bugzilla
-sourceprefix: bugzilla2.20.x mozilla/webtools/bugzilla
-sourceroot: bugzilla2.18.x /var/www/html/mxr/lxr-root/lxr-data/bugzilla2.18.x/mozilla/webtools/bugzilla
-sourceprefix: bugzilla2.18.x mozilla/webtools/bugzilla
-sourceroot: bugzilla2.16.x /var/www/html/mxr/lxr-root/lxr-data/bugzilla2.16.x/mozilla/webtools/bugzilla
-sourceprefix: bugzilla2.16.x mozilla/webtools/bugzilla
-sourceroot: update1.0 /var/www/html/mxr/lxr-root/lxr-data/update1.0/mozilla/webtools/update
-sourceprefix: update1.0 mozilla/webtools/update
-sourceroot: mozilla-org /var/www/html/mxr/lxr-root/lxr-data/mozilla-org/mozilla-org
-sourceprefix: mozilla-org mozilla-org
-sourceroot: mozilla-com /var/www/html/mxr/lxr-root/lxr-data/mozilla-org/mozilla-com
-sourceprefix: mozilla-com mozilla-com
-sourceroot: mozillafoundation-org /var/www/html/mxr/lxr-root/lxr-data/mozilla-org/mozillafoundation-org
-sourceprefix: mozillafoundation-org mozillafoundation-org
-sourceroot: devmo /var/www/html/mxr/lxr-root/lxr-data/mozilla-org/devmo
-sourceprefix: devmo devmo
-sourceroot: devmowiki /var/www/html/mxr/lxr-root/lxr-data/mozilla-org/devmowiki
-sourceprefix: devmowiki devmowiki
-sourceroot: spreadfirefox /var/www/html/mxr/lxr-root/lxr-data/mozilla-org/spreadfirefox
-sourceprefix: spreadfirefox spreadfirefox
-sourceroot: bugzilla-org /var/www/html/mxr/lxr-root/lxr-data/mozilla-org/bugzilla-org
+sourceroot: bugzilla-org /data/mxr-data/mozilla-org/bugzilla-org
 sourceprefix: bugzilla-org bugzilla-org
+sourceroot: bugzilla2.18 /data/mxr-data/bugzilla2.18/bugzilla
+sourceprefix: bugzilla2.18 mozilla/webtools/bugzilla
+sourceroot: bugzilla2.20 /data/mxr-data/bugzilla2.20/bugzilla
+sourceprefix: bugzilla2.20 mozilla/webtools/bugzilla
+sourceroot: bugzilla2.22 /data/mxr-data/bugzilla2.22/bugzilla
+sourceprefix: bugzilla2.22 mozilla/webtools/bugzilla
+sourceroot: bugzilla3.0 /data/mxr-data/bugzilla3.0/bugzilla
+sourceprefix: bugzilla3.0 mozilla/webtools/bugzilla
+sourceroot: classic /data/mxr-data/classic/mozilla
+sourceprefix: classic mozilla
+sourceroot: devmo /data/mxr-data/mozilla-org/devmo
+sourceprefix: devmo devmo
+sourceroot: devmowiki /data/mxr-data/mozilla-org/devmowiki
+sourceprefix: devmowiki devmowiki
+sourceroot: ef /data/mxr-data/ef/mozilla
+sourceprefix: ef mozilla
+sourceroot: firefox /data/mxr-data/firefox/mozilla
+sourceprefix: firefox mozilla
+sourceroot: firefox2 /data/mxr-data/firefox2/mozilla
+sourceprefix: firefox2 mozilla
+sourceroot: fuel /data/mxr-data/fuel/fuel
+sourceprefix: fuel mozilla/browser/fuel
+sourceroot: l10n /data/mxr-data/l10n/mozilla
+sourceprefix: l10n l10n/mozilla
+sourceroot: l10n-aviarybranch /data/mxr-data/l10n-aviarybranch/mozilla
+sourceprefix: l10n-aviarybranch l10n/mozilla
+sourceroot: l10n-mozilla1.8 /data/mxr-data/l10n-mozilla1.8/mozilla
+sourceprefix: l10n-mozilla1.8 l10n/mozilla
+sourceroot: l10n-mozilla1.8.0 /data/mxr-data/l10n-mozilla1.8.0/mozilla
+sourceprefix: l10n-mozilla1.8.0 l10n/mozilla
+sourceroot: m10 /data/mxr-data/m10/mozilla
+sourceprefix: m10 mozilla
+sourceroot: mailnews /data/mxr-data/mailnews/mozilla
+sourceprefix: mailnews mozilla
+sourceroot: mozilla /data/mxr-data/mozilla/mozilla
+sourceprefix: mozilla mozilla
+sourceroot: mozilla-central /data/mxr-data/mozilla-central/mozilla-central
+sourceprefix: mozilla-central mozilla
+sourceroot: mozilla-com /data/mxr-data/mozilla-org/mozilla-com
+sourceprefix: mozilla-com mozilla-com
+sourceroot: mozilla-org /data/mxr-data/mozilla-org/mozilla-org
+sourceprefix: mozilla-org mozilla-org
+sourceroot: mozilla1.7 /data/mxr-data/mozilla1.7/mozilla
+sourceprefix: mozilla1.7 mozilla
+sourceroot: mozilla1.8 /data/mxr-data/mozilla1.8/mozilla
+sourceprefix: mozilla1.8 mozilla
+sourceroot: mozilla1.8.0 /data/mxr-data/mozilla1.8.0/mozilla
+sourceprefix: mozilla1.8.0 mozilla
+sourceroot: mozillafoundation-org /data/mxr-data/mozilla-org/mozillafoundation-org
+sourceprefix: mozillafoundation-org mozillafoundation-org
+sourceroot: mozillalabs-central /data/mxr-data/mozillalabs-central/labs
+sourceprefix: mozillalabs-central mozillalabs
+sourceroot: mozillasvn /data/mxr-data/mozillasvn/svn.mozilla.org
+sourceprefix: mozillasvn svn.mozilla.org
+sourceroot: mozillasvn-all /data/mxr-data/mozillasvn-all/svn.mozilla.org
+sourceprefix: mozillasvn-all svn.mozilla.org
+sourceroot: mozillausers-central /data/mxr-data/mozillausers-central/users
+sourceprefix: mozillausers-central mozillausers
+sourceroot: nspr /data/mxr-data/nspr/mozilla
+sourceprefix: nspr mozilla/nsprpub
+sourceroot: seamonkey /data/mxr-data/seamonkey/mozilla
+sourceprefix: seamonkey mozilla
+sourceroot: security /data/mxr-data/security/mozilla
+sourceprefix: security mozilla
+sourceroot: spreadfirefox /data/mxr-data/mozilla-org/spreadfirefox
+sourceprefix: spreadfirefox spreadfirefox
+sourceroot: sqlite /data/mxr-data/sqlite/sqlite
+sourceprefix: sqlite sqlite
+sourceroot: tamarin-central /data/mxr-data/tamarin-central/tamarin-central
+sourceprefix: tamarin-central tamarin
+sourceroot: update1.0 /data/mxr-data/update1.0/update
+sourceprefix: update1.0 mozilla/webtools/update
+sourceroot: webtools /data/mxr-data/webtools/webtools
+sourceprefix: webtools mozilla/webtools
+#XXX: PLEASE KEEP THIS LIST IN ALPHABETICAL ORDER!!! :XXX#
 
 # name of the source.
 srcrootname: mozilla
@@ -127,37 +132,17 @@ incprefix: /include
 #dbdir: /opt/lxr-data/db
 
 # If using multiple trees, give the parent directory containing
-# dirs for each tree. For mozilla, /var/www/html/mxr/lxr-root/lxr-data contains
+# dirs for each tree. For mozilla, /data/mxr-data contains
 # a directory for each tree. Each of these directories contains
 # the tree's databases, and a mozilla directory containing the
 # source.
-dbdir: /var/www/html/mxr/lxr-root/lxr-data
+dbdir: /data/mxr-data
 
 # Glimpse can be found here.
-glimpsebin: /usr/local/glimpse-4.18.1p/bin/glimpse
+glimpsebin: /usr/bin/glimpse
 
 # The power of regexps.  This is pretty Linux-specific, but quite
 # useful.  Tinker with it and see what it does.  (How's that for
 # documentation?)
 #map: /include/asm[^\/]*/ /include/asm-$a/
 #map: /arch/[^\/]+/ /arch/$a/
-sourceroot: bonsai-svn /var/www/html/mxr/lxr-root/lxr-data/bonsai-svn
-sourceprefix: bonsai-svn webtools
-sourceroot: bonsai-svn-all /var/www/html/mxr/lxr-root/lxr-data/bonsai-svn-all
-sourceprefix: bonsai-svn-all webtools
-sourceroot: tamarin-central /var/www/html/mxr/lxr-root/lxr-data/tamarin-central/tamarin-central
-sourceprefix: tamarin-central tamarin
-sourceroot: mozilla-central /var/www/html/mxr/lxr-root/lxr-data/mozilla-central/mozilla-central
-sourceprefix: mozilla-central mozilla
-sourceroot: mozillalabs-central /var/www/html/mxr/lxr-root/lxr-data/mozillalabs-central/labs
-sourceprefix: mozillalabs-central mozillalabs
-sourceroot: mozillausers-central /var/www/html/mxr/lxr-root/lxr-data/mozillausers-central/users
-sourceprefix: mozillausers-central mozillausers
-sourceroot: vlc /var/www/html/mxr/lxr-root/lxr-data/vlc/vlc
-sourceprefix: vlc vlc
-sourceroot: mozillasvn-all /var/www/html/mxr/lxr-root/lxr-data/mozillasvn-all/svn.mozilla.org
-sourceprefix: mozillasvn-all svn.mozilla.org
-sourceroot: mozillasvn /var/www/html/mxr/lxr-root/lxr-data/mozillasvn/svn.mozilla.org
-sourceprefix: mozillasvn svn.mozilla.org
-sourceroot: sqlite /var/www/html/mxr/lxr-root/lxr-data/sqlite/sqlite
-sourceprefix: sqlite sqlite
