Add favicon, fix config for production

--- a/lxr.conf
+++ b/lxr.conf
@@ -9,7 +9,7 @@
 
 # Define the base url for the LXR files. Tree name (if any) is appended
 # to this.
-baseurl: http://mxr-stage.mozilla.org/
+baseurl: http://mxr.mozilla.org/
 
 # url prefix for bonsai 
 bonsaihome: http://bonsai.mozilla.org
