Rewrite parts of the treelist. Remove outdated/obsolete trees. Fix mxr integration for l10n trees. Add back mailnews. Remove links to outdated landfill mxr instances. Add link to report MXR bugs in Bugzilla.

--- a/lxr.conf
+++ b/lxr.conf
@@ -56,8 +56,6 @@ sourceroot: devmo /data/mxr-data/mozilla-org/devmo
 sourceprefix: devmo devmo
 sourceroot: devmowiki /data/mxr-data/mozilla-org/devmowiki
 sourceprefix: devmowiki devmowiki
-sourceroot: ef /data/mxr-data/ef/mozilla
-sourceprefix: ef mozilla
 sourceroot: firefox /data/mxr-data/firefox/mozilla
 sourceprefix: firefox mozilla
 sourceroot: firefox2 /data/mxr-data/firefox2/mozilla
@@ -65,15 +63,13 @@ sourceprefix: firefox2 mozilla
 sourceroot: fuel /data/mxr-data/fuel/fuel
 sourceprefix: fuel mozilla/browser/fuel
 sourceroot: l10n /data/mxr-data/l10n/mozilla
-sourceprefix: l10n l10n/mozilla
+sourceprefix: l10n l10n
 sourceroot: l10n-aviarybranch /data/mxr-data/l10n-aviarybranch/mozilla
-sourceprefix: l10n-aviarybranch l10n/mozilla
+sourceprefix: l10n-aviarybranch l10n
 sourceroot: l10n-mozilla1.8 /data/mxr-data/l10n-mozilla1.8/mozilla
-sourceprefix: l10n-mozilla1.8 l10n/mozilla
+sourceprefix: l10n-mozilla1.8 l10n
 sourceroot: l10n-mozilla1.8.0 /data/mxr-data/l10n-mozilla1.8.0/mozilla
-sourceprefix: l10n-mozilla1.8.0 l10n/mozilla
-sourceroot: m10 /data/mxr-data/m10/mozilla
-sourceprefix: m10 mozilla
+sourceprefix: l10n-mozilla1.8.0 l10n
 sourceroot: mailnews /data/mxr-data/mailnews/mozilla
 sourceprefix: mailnews mozilla
 sourceroot: mozilla /data/mxr-data/mozilla/mozilla
@@ -90,8 +86,6 @@ sourceroot: mozilla1.8 /data/mxr-data/mozilla1.8/mozilla
 sourceprefix: mozilla1.8 mozilla
 sourceroot: mozilla1.8.0 /data/mxr-data/mozilla1.8.0/mozilla
 sourceprefix: mozilla1.8.0 mozilla
-sourceroot: mozillafoundation-org /data/mxr-data/mozilla-org/mozillafoundation-org
-sourceprefix: mozillafoundation-org mozillafoundation-org
 sourceroot: mozillalabs-central /data/mxr-data/mozillalabs-central/labs
 sourceprefix: mozillalabs-central mozillalabs
 sourceroot: mozillasvn /data/mxr-data/mozillasvn/svn.mozilla.org
@@ -108,12 +102,8 @@ sourceroot: security /data/mxr-data/security/mozilla
 sourceprefix: security mozilla
 sourceroot: spreadfirefox /data/mxr-data/mozilla-org/spreadfirefox
 sourceprefix: spreadfirefox spreadfirefox
-sourceroot: sqlite /data/mxr-data/sqlite/sqlite
-sourceprefix: sqlite sqlite
 sourceroot: tamarin-central /data/mxr-data/tamarin-central/tamarin-central
 sourceprefix: tamarin-central tamarin
-sourceroot: update1.0 /data/mxr-data/update1.0/update
-sourceprefix: update1.0 mozilla/webtools/update
 sourceroot: webtools /data/mxr-data/webtools/webtools
 sourceprefix: webtools mozilla/webtools
 #XXX: PLEASE KEEP THIS LIST IN ALPHABETICAL ORDER!!! :XXX#
