--- a/lxr.conf
+++ b/lxr.conf
@@ -58,6 +58,8 @@ sourceroot: firefox2 /data/mxr-data/firefox2/mozilla
 sourceprefix: firefox2 mozilla
 sourceroot: fuel /data/mxr-data/fuel/fuel
 sourceprefix: fuel mozilla/browser/fuel
+sourceroot: js /data/mxr-data/js/mozilla
+sourceprefix: js mozilla
 sourceroot: l10n /data/mxr-data/l10n/mozilla
 sourceprefix: l10n l10n
 sourceroot: l10n-aviarybranch /data/mxr-data/l10n-aviarybranch/mozilla
