Fix spreadfirefox. Add addons and www.mozilla.com.

--- a/lxr.conf
+++ b/lxr.conf
@@ -34,6 +34,8 @@ identref: template-ident-fileref
 # entry per tree where each entry is a tree/directory pair.
 
 #XXX: PLEASE KEEP THIS LIST IN ALPHABETICAL ORDER!!! :XXX#
+sourceroot: addons /data/mxr-data/mozillasvn/svn.mozilla.org/addons
+sourceprefix: addons addons
 sourceroot: aviary101branch /data/mxr-data/aviary101branch/mozilla
 sourceprefix: aviary101branch mozilla
 sourceroot: aviarybranch /data/mxr-data/aviarybranch/mozilla
@@ -74,6 +76,8 @@ sourceroot: mozilla /data/mxr-data/mozilla/mozilla
 sourceprefix: mozilla mozilla
 sourceroot: mozilla-central /data/mxr-data/mozilla-central/mozilla-central
 sourceprefix: mozilla-central mozilla
+sourceroot: mozilla-com /data/mxr-data/mozillasvn/svn.mozilla.org/projects/www.mozilla.com
+sourceprefix: mozilla-com mozilla-com
 sourceroot: mozilla-org /data/mxr-data/mozilla-org/mozilla-org
 sourceprefix: mozilla-org mozilla-org
 sourceroot: mozilla1.7 /data/mxr-data/mozilla1.7/mozilla
@@ -96,7 +100,7 @@ sourceroot: seamonkey /data/mxr-data/seamonkey/mozilla
 sourceprefix: seamonkey mozilla
 sourceroot: security /data/mxr-data/security/mozilla
 sourceprefix: security mozilla
-sourceroot: spreadfirefox /data/mxr-data/mozilla-org/spreadfirefox
+sourceroot: spreadfirefox /data/mxr-data/mozillasvn/svn.mozilla.org/projects/spreadfirefox.com
 sourceprefix: spreadfirefox spreadfirefox
 sourceroot: tamarin-central /data/mxr-data/tamarin-central/tamarin-central
 sourceprefix: tamarin-central tamarin
