adding bugzilla bzr from everything solved

--- a/lxr.conf
+++ b/lxr.conf
@@ -173,3 +173,5 @@ sourceroot: oink-central /var/www/html/mxr/lxr-root/lxr-data/oink-central/oink
 sourceprefix: oink-central oink
 sourceroot: webtools-central /var/www/html/mxr/lxr-root/lxr-data/webtools-central/webtools
 sourceprefix: webtools-central webtools
+sourceroot: bugzilla-bzr /var/www/html/mxr/lxr-root/lxr-data/bugzilla-bzr/bugzilla
+sourceprefix: bugzilla-bzr bugzilla
