--- a/lxr.conf
+++ b/lxr.conf
@@ -54,6 +54,8 @@ sourceroot: bugzilla3.0 /data/mxr-data/bugzilla3.0/bugzilla
 sourceprefix: bugzilla3.0 mozilla/webtools/bugzilla
 sourceroot: classic /data/mxr-data/classic/mozilla
 sourceprefix: classic mozilla
+sourceroot: comm-central /data/mxr-data/comm-central/comm-central
+sourceprefix: comm-central mozilla
 sourceroot: firefox /data/mxr-data/firefox/mozilla
 sourceprefix: firefox mozilla
 sourceroot: firefox2 /data/mxr-data/firefox2/mozilla
