Use 'comm-central/' prefix for comm-central.

--- a/lxr.conf
+++ b/lxr.conf
@@ -55,7 +55,7 @@ sourceprefix: bugzilla3.0 mozilla/webtools/bugzilla
 sourceroot: classic /data/mxr-data/classic/mozilla
 sourceprefix: classic mozilla
 sourceroot: comm-central /data/mxr-data/comm-central/comm-central
-sourceprefix: comm-central mozilla
+sourceprefix: comm-central comm-central
 sourceroot: firefox /data/mxr-data/firefox/mozilla
 sourceprefix: firefox mozilla
 sourceroot: firefox2 /data/mxr-data/firefox2/mozilla
