adding l10n-central adding pull script for mozillalabs-central (which is shared by l10n-central)

--- a/lxr.conf
+++ b/lxr.conf
@@ -66,6 +66,8 @@ sourceroot: js /data/mxr-data/js/mozilla
 sourceprefix: js mozilla
 sourceroot: l10n /data/mxr-data/l10n/mozilla
 sourceprefix: l10n l10n
+sourceroot: l10n-central /data/mxr-data/l10n-central/l10n-central
+sourceprefix: l10n-central l10n-central
 sourceroot: l10n-aviarybranch /data/mxr-data/l10n-aviarybranch/mozilla
 sourceprefix: l10n-aviarybranch l10n
 sourceroot: l10n-mozilla1.8 /data/mxr-data/l10n-mozilla1.8/mozilla
