renaming mozillalabs-central to labs-central

--- a/lxr.conf
+++ b/lxr.conf
@@ -74,6 +74,8 @@ sourceroot: l10n-mozilla1.8 /data/mxr-data/l10n-mozilla1.8/mozilla
 sourceprefix: l10n-mozilla1.8 l10n
 sourceroot: l10n-mozilla1.8.0 /data/mxr-data/l10n-mozilla1.8.0/mozilla
 sourceprefix: l10n-mozilla1.8.0 l10n
+sourceroot: labs-central /data/mxr-data/labs-central/labs
+sourceprefix: labs-central labs
 alias: mailnews thunderbird
 sourceroot: mobile-browser /data/mxr-data/mobile-browser/mobile-browser
 sourceprefix: mobile-browser mozilla/mobile
@@ -91,8 +93,6 @@ sourceroot: mozilla1.8 /data/mxr-data/mozilla1.8/mozilla
 sourceprefix: mozilla1.8 mozilla
 sourceroot: mozilla1.8.0 /data/mxr-data/mozilla1.8.0/mozilla
 sourceprefix: mozilla1.8.0 mozilla
-sourceroot: mozillalabs-central /data/mxr-data/mozillalabs-central/labs
-sourceprefix: mozillalabs-central mozillalabs
 sourceroot: mozillasvn /data/mxr-data/mozillasvn/svn.mozilla.org
 sourceprefix: mozillasvn svn.mozilla.org
 sourceroot: mozillasvn-all /data/mxr-data/mozillasvn-all/svn.mozilla.org
