adding webtools-central

--- a/lxr.conf
+++ b/lxr.conf
@@ -113,6 +113,8 @@ sourceroot: thunderbird /data/mxr-data/thunderbird/mozilla
 sourceprefix: thunderbird mozilla
 sourceroot: webtools /data/mxr-data/webtools/webtools
 sourceprefix: webtools mozilla/webtools
+sourceroot: webtools-central /data/mxr-data/webtools-central/webtools
+sourceprefix: webtools-central webtools
 #XXX: PLEASE KEEP THIS LIST IN ALPHABETICAL ORDER!!! :XXX#
 
 # name of the source.
