--- a/lxr.conf
+++ b/lxr.conf
@@ -52,6 +52,8 @@ sourceroot: bugzilla2.22 /data/mxr-data/bugzilla2.22/bugzilla
 sourceprefix: bugzilla2.22 mozilla/webtools/bugzilla
 sourceroot: bugzilla3.0 /data/mxr-data/bugzilla3.0/bugzilla
 sourceprefix: bugzilla3.0 mozilla/webtools/bugzilla
+sourceroot: build-central /var/www/html/mxr/lxr-root/lxr-data/build-central/build
+sourceprefix: build-central build
 sourceroot: classic /data/mxr-data/classic/mozilla
 sourceprefix: classic mozilla
 sourceroot: comm-central /data/mxr-data/comm-central/comm-central
@@ -62,6 +64,8 @@ sourceroot: firefox2 /data/mxr-data/firefox2/mozilla
 sourceprefix: firefox2 mozilla
 sourceroot: fuel /data/mxr-data/fuel/fuel
 sourceprefix: fuel mozilla/browser/fuel
+sourceroot: incubator-central /var/www/html/mxr/lxr-root/lxr-data/incubator-central/incubator
+sourceprefix: incubator-central incubator
 sourceroot: js /data/mxr-data/js/mozilla
 sourceprefix: js mozilla
 sourceroot: l10n /data/mxr-data/l10n/mozilla
