--- a/lxr.conf
+++ b/lxr.conf
@@ -54,6 +54,7 @@ sourceroot: bugzilla3.0 /data/mxr-data/bugzilla3.0/bugzilla
 sourceprefix: bugzilla3.0 mozilla/webtools/bugzilla
 sourceroot: build-central /data/mxr-data/build-central/build
 sourceprefix: build-central build
+alias: build build-central
 sourceroot: classic /data/mxr-data/classic/mozilla
 sourceprefix: classic mozilla
 sourceroot: comm-central /data/mxr-data/comm-central/comm-central
