--- a/lxr.conf
+++ b/lxr.conf
@@ -79,6 +79,8 @@ sourceroot: l10n-mozilla1.8 /data/mxr-data/l10n-mozilla1.8/mozilla
 sourceprefix: l10n-mozilla1.8 l10n
 sourceroot: l10n-mozilla1.8.0 /data/mxr-data/l10n-mozilla1.8.0/mozilla
 sourceprefix: l10n-mozilla1.8.0 l10n
+sourceroot: l10n-mozilla1.9.1 /data/mxr-data/l10n-mozilla1.9.1/mozilla
+sourceprefix: l10n-mozilla1.9.1 l10n
 sourceroot: labs-central /data/mxr-data/labs-central/labs
 sourceprefix: labs-central labs
 alias: mailnews thunderbird
@@ -98,6 +100,8 @@ sourceroot: mozilla1.8 /data/mxr-data/mozilla1.8/mozilla
 sourceprefix: mozilla1.8 mozilla
 sourceroot: mozilla1.8.0 /data/mxr-data/mozilla1.8.0/mozilla
 sourceprefix: mozilla1.8.0 mozilla
+sourceroot: mozilla1.9.1 /data/mxr-data/mozilla1.9.1/mozilla
+sourceprefix: mozilla1.9.1 mozilla
 sourceroot: mozillasvn /data/mxr-data/mozillasvn/svn.mozilla.org
 sourceprefix: mozillasvn svn.mozilla.org
 sourceroot: mozillasvn-all /data/mxr-data/mozillasvn-all/svn.mozilla.org
