--- a/lxr.conf
+++ b/lxr.conf
@@ -52,6 +52,8 @@ sourceroot: bugzilla2.22 /data/mxr-data/bugzilla2.22/bugzilla
 sourceprefix: bugzilla2.22 mozilla/webtools/bugzilla
 sourceroot: bugzilla3.0 /data/mxr-data/bugzilla3.0/bugzilla
 sourceprefix: bugzilla3.0 mozilla/webtools/bugzilla
+sourceroot: bugzilla3.2 /data/mxr-data/bugzilla3.2/bugzilla
+sourceprefix: bugzilla3.2 mozilla/webtools/bugzilla
 sourceroot: build-central /data/mxr-data/build-central/build
 sourceprefix: build-central build
 alias: build build-central
