Bug 478582 Please hide the Thunderbird mxr root

--- a/lxr.conf
+++ b/lxr.conf
@@ -85,7 +85,7 @@ sourceroot: l10n-mozilla1.9.1 /data/mxr-data/l10n-mozilla1.9.1/mozilla
 sourceprefix: l10n-mozilla1.9.1 l10n
 sourceroot: labs-central /data/mxr-data/labs-central/labs
 sourceprefix: labs-central labs
-alias: mailnews thunderbird
+alias: mailnews comm-central
 sourceroot: mobile-browser /data/mxr-data/mobile-browser/mobile-browser
 sourceprefix: mobile-browser mozilla/mobile
 sourceroot: mozilla /data/mxr-data/mozilla/mozilla
@@ -120,8 +120,7 @@ sourceroot: spreadfirefox /data/mxr-data/mozillasvn/svn.mozilla.org/projects/spr
 sourceprefix: spreadfirefox spreadfirefox
 sourceroot: tamarin-central /data/mxr-data/tamarin-central/tamarin-central
 sourceprefix: tamarin-central tamarin
-sourceroot: thunderbird /data/mxr-data/thunderbird/mozilla
-sourceprefix: thunderbird mozilla
+alias: thunderbird comm-central
 sourceroot: webtools /data/mxr-data/webtools/webtools
 sourceprefix: webtools mozilla/webtools
 sourceroot: webtools-central /data/mxr-data/webtools-central/webtools
