Rename old addons to amo, move bugzilla-org, add addons.

--- a/lxr.conf
+++ b/lxr.conf
@@ -34,15 +34,17 @@ identref: template-ident-fileref
 # entry per tree where each entry is a tree/directory pair.
 
 #XXX: PLEASE KEEP THIS LIST IN ALPHABETICAL ORDER!!! :XXX#
-sourceroot: addons /data/mxr-data/mozillasvn/svn.mozilla.org/addons
+sourceroot: addons /data/mxr-data/addons/addons
 sourceprefix: addons addons
+sourceroot: amo /data/mxr-data/mozillasvn/svn.mozilla.org/addons
+sourceprefix: amo addons
 sourceroot: aviary101branch /data/mxr-data/aviary101branch/mozilla
 sourceprefix: aviary101branch mozilla
 sourceroot: aviarybranch /data/mxr-data/aviarybranch/mozilla
 sourceprefix: aviarybranch mozilla
 sourceroot: bugzilla /data/mxr-data/bugzilla/bugzilla
 sourceprefix: bugzilla mozilla/webtools/bugzilla
-sourceroot: bugzilla-org /data/mxr-data/mozilla-org/bugzilla-org
+sourceroot: bugzilla-org /data/mxr-data/bugzilla-org/bugzilla-org
 sourceprefix: bugzilla-org bugzilla-org
 sourceroot: bugzilla2.18 /data/mxr-data/bugzilla2.18/bugzilla
 sourceprefix: bugzilla2.18 mozilla/webtools/bugzilla
