Bug 506381 - Add hg.m.o/projects/

--- a/lxr.conf
+++ b/lxr.conf
@@ -115,6 +115,8 @@ sourceroot: mozillausers-central /data/mxr-data/mozillausers-central/users
 sourceprefix: mozillausers-central mozillausers
 sourceroot: nspr /data/mxr-data/nspr/mozilla
 sourceprefix: nspr mozilla/nsprpub
+sourceroot: projects-central /data/mxr-data/projects-central/projects
+sourceprefix: projects-central projects
 sourceroot: seamonkey /data/mxr-data/seamonkey/mozilla
 sourceprefix: seamonkey mozilla
 sourceroot: security /data/mxr-data/security/mozilla
