--- a/lxr.conf
+++ b/lxr.conf
@@ -58,6 +58,8 @@ sourceroot: bugzilla3.2 /data/mxr-data/bugzilla3.2/bugzilla
 sourceprefix: bugzilla3.2 mozilla/webtools/bugzilla
 sourceroot: bugzilla3.4 /data/mxr-data/bugzilla3.4/bugzilla
 sourceprefix: bugzilla3.4 mozilla/webtools/bugzilla
+sourceroot: bugzilla3.6 /data/mxr-data/bugzilla3.6/bugzilla
+sourceprefix: bugzilla3.6 mozilla/webtools/bugzilla
 sourceroot: build-central /data/mxr-data/build-central/build
 sourceprefix: build-central build
 alias: build build-central
