Bug 558252 Add the Camino Hg repo to MXR r=reed

--- a/lxr.conf
+++ b/lxr.conf
@@ -63,6 +63,8 @@ sourceprefix: bugzilla3.6 mozilla/webtools/bugzilla
 sourceroot: build-central /data/mxr-data/build-central/build
 sourceprefix: build-central build
 alias: build build-central
+sourceroot: camino /data/mxr-data/camino/camino
+sourceprefix: camino camino
 sourceroot: classic /data/mxr-data/classic/mozilla
 sourceprefix: classic mozilla
 sourceroot: comm-central /data/mxr-data/comm-central/comm-central
