amo root fix, add mozilla/dbm to security module (bug 568738)

--- a/lxr.conf
+++ b/lxr.conf
@@ -38,7 +38,7 @@ sourceroot: addons /data/mxr-data/amo/amo
 sourceprefix: addons addons
 sourceroot: amo /data/mxr-data/mozillasvn/svn.mozilla.org/addons
 sourceprefix: amo addons
-sourceroot: amo-stage /data/mxr-data/amo-stage/amo
+sourceroot: amo-stage /data/mxr-data/amo/amo
 sourceroot: aviary101branch /data/mxr-data/aviary101branch/mozilla
 sourceprefix: aviary101branch mozilla
 sourceroot: aviarybranch /data/mxr-data/aviarybranch/mozilla
