Bug 571341 add services-central root for hg.mozilla.org/services/*

--- a/lxr.conf
+++ b/lxr.conf
@@ -134,6 +134,8 @@ sourceroot: seamonkey /data/mxr-data/seamonkey/mozilla
 sourceprefix: seamonkey mozilla
 sourceroot: security /data/mxr-data/security/mozilla
 sourceprefix: security mozilla
+sourceroot: services-central /data/mxr-data/services-central/services-central
+sourceprefix: services-central services
 sourceroot: spreadfirefox /data/mxr-data/mozillasvn/svn.mozilla.org/projects/spreadfirefox.com
 sourceprefix: spreadfirefox spreadfirefox
 sourceroot: tamarin-central /data/mxr-data/tamarin-central/tamarin-central
