Bug 572789 please start indexing http://hg.mozilla.org/releases/mozilla2.0 on mxr

--- a/lxr.conf
+++ b/lxr.conf
@@ -98,6 +98,8 @@ sourceroot: l10n-mozilla1.9.1 /data/mxr-data/l10n-mozilla1.9.1/mozilla
 sourceprefix: l10n-mozilla1.9.1 l10n
 sourceroot: l10n-mozilla1.9.2 /data/mxr-data/l10n-mozilla1.9.2/mozilla
 sourceprefix: l10n-mozilla1.9.2 l10n
+sourceroot: l10n-mozilla2.0 /data/mxr-data/l10n-mozilla2.0/mozilla
+sourceprefix: l10n-mozilla2.0 l10n
 sourceroot: labs-central /data/mxr-data/labs-central/labs
 sourceprefix: labs-central labs
 sourceroot: mobile-browser /data/mxr-data/mobile-browser/mobile-browser
@@ -120,6 +122,8 @@ sourceroot: mozilla1.9.1 /data/mxr-data/mozilla1.9.1/mozilla
 sourceprefix: mozilla1.9.1 mozilla
 sourceroot: mozilla1.9.2 /data/mxr-data/mozilla1.9.2/mozilla
 sourceprefix: mozilla1.9.2 mozilla
+sourceroot: mozilla2.0 /data/mxr-data/mozilla2.0/mozilla
+sourceprefix: mozilla2.0 mozilla
 sourceroot: mozillasvn /data/mxr-data/mozillasvn/svn.mozilla.org
 sourceprefix: mozillasvn svn.mozilla.org
 sourceroot: mozillasvn-all /data/mxr-data/mozillasvn-all/svn.mozilla.org
