Refactor tree switcher from source, find, search and ident to template-tree* Also refactor two other scripts to script.js

--- a/lxr.conf
+++ b/lxr.conf
@@ -22,6 +22,10 @@ htmldir:  template-dir
 
 sourcehead: template-source-head
 sourcedirhead: template-sourcedir-head
+sourcedirtail: template-sourcedir-tail
+
+treechooser: template-tree
+treeentry: template-tree-entry
 
 identref: template-ident-fileref
 
