Add ability to change hg revs via a menu

--- a/lxr.conf
+++ b/lxr.conf
@@ -21,11 +21,15 @@ htmltail: template-tail
 htmldir:  template-dir
 
 sourcehead: template-source-head
+sourcetail: template-source-tail
 sourcedirhead: template-sourcedir-head
 sourcedirtail: template-sourcedir-tail
 
 treechooser: template-tree
 treeentry: template-tree-entry
+
+revchooser: template-rev
+reventry: template-rev-entry
 
 identref: template-ident-fileref
 
