Bug 649619 Add roots for mozilla-aurora and mozilla-beta

--- a/lxr.conf
+++ b/lxr.conf
@@ -114,6 +114,10 @@ sourceroot: mobile-browser /data/mxr-data/mobile-browser/mobile-browser
 sourceprefix: mobile-browser mozilla/mobile
 sourceroot: mozilla /data/mxr-data/mozilla/mozilla
 sourceprefix: mozilla mozilla
+sourceroot: mozilla-aurora /data/mxr-data/mozilla-aurora/mozilla-aurora
+sourceprefix: mozilla-aurora mozilla
+sourceroot: mozilla-beta /data/mxr-data/mozilla-beta/mozilla-beta
+sourceprefix: mozilla-beta mozilla
 sourceroot: mozilla-central /data/mxr-data/mozilla-central/mozilla-central
 sourceprefix: mozilla-central mozilla
 sourceroot: mozilla-com /data/mxr-data/mozillasvn/svn.mozilla.org/projects/www.mozilla.com
