--- a/lxr.conf
+++ b/lxr.conf
@@ -96,6 +96,10 @@ sourceroot: l10n /data/mxr-data/l10n/mozilla
 sourceprefix: l10n l10n
 sourceroot: l10n-central /data/mxr-data/l10n-central/l10n-central
 sourceprefix: l10n-central l10n-central
+sourceroot: l10n-mozilla-aurora /data/mxr-data/l10n-mozilla-aurora/l10n
+sourceprefix: l10n-mozilla-aurora l10n
+sourceroot: l10n-mozilla-beta /data/mxr-data/l10n-mozilla-beta/l10n
+sourceprefix: l10n-mozilla-beta l10n
 sourceroot: l10n-aviarybranch /data/mxr-data/l10n-aviarybranch/mozilla
 sourceprefix: l10n-aviarybranch l10n
 sourceroot: l10n-mozilla1.8 /data/mxr-data/l10n-mozilla1.8/mozilla
