adding comm-2.0, comm-aurora, comm-beta, comm-release to configs

--- a/lxr.conf
+++ b/lxr.conf
@@ -84,6 +84,14 @@ sourceroot: comm-1.9.1 /data/mxr-data/comm-1.9.1/comm-1.9.1
 sourceprefix: comm-1.9.1 comm-1.9.1
 sourceroot: comm-1.9.2 /data/mxr-data/comm-1.9.2/comm-1.9.2
 sourceprefix: comm-1.9.2 comm-1.9.2
+sourceroot: comm-2.0 /data/mxr-data/comm-2.0/comm-2.0
+sourceprefix: comm-2.0 comm-2.0
+sourceroot: comm-aurora /data/mxr-data/comm-aurora/comm-aurora
+sourceprefix: comm-aurora comm-aurora
+sourceroot: comm-beta /data/mxr-data/comm-beta/comm-beta
+sourceprefix: comm-beta comm-beta
+sourceroot: comm-release /data/mxr-data/comm-release/comm-release
+sourceprefix: comm-release comm-release
 sourceroot: firefox /data/mxr-data/firefox/mozilla
 sourceprefix: firefox mozilla
 sourceroot: firefox2 /data/mxr-data/firefox2/mozilla
