Adding mozilla-release and associated l10n repo

--- a/lxr.conf
+++ b/lxr.conf
@@ -110,6 +110,8 @@ sourceroot: l10n-mozilla-aurora /data/mxr-data/l10n-mozilla-aurora/l10n
 sourceprefix: l10n-mozilla-aurora l10n
 sourceroot: l10n-mozilla-beta /data/mxr-data/l10n-mozilla-beta/l10n
 sourceprefix: l10n-mozilla-beta l10n
+sourceroot: l10n-mozilla-release /data/mxr-data/l10n-mozilla-release/l10n
+sourceprefix: l10n-mozilla-release l10n
 sourceroot: l10n-aviarybranch /data/mxr-data/l10n-aviarybranch/mozilla
 sourceprefix: l10n-aviarybranch l10n
 sourceroot: l10n-mozilla1.8 /data/mxr-data/l10n-mozilla1.8/mozilla
@@ -132,6 +134,8 @@ sourceroot: mozilla-aurora /data/mxr-data/mozilla-aurora/mozilla-aurora
 sourceprefix: mozilla-aurora mozilla
 sourceroot: mozilla-beta /data/mxr-data/mozilla-beta/mozilla-beta
 sourceprefix: mozilla-beta mozilla
+sourceroot: mozilla-release /data/mxr-data/mozilla-release/mozilla-release
+sourceprefix: mozilla-release mozilla
 sourceroot: mozilla-central /data/mxr-data/mozilla-central/mozilla-central
 sourceprefix: mozilla-central mozilla
 sourceroot: mozilla-com /data/mxr-data/mozillasvn/svn.mozilla.org/projects/www.mozilla.com
