--- a/lxr.conf
+++ b/lxr.conf
@@ -92,6 +92,8 @@ sourceroot: comm-beta /data/mxr-data/comm-beta/comm-beta
 sourceprefix: comm-beta comm-beta
 sourceroot: comm-release /data/mxr-data/comm-release/comm-release
 sourceprefix: comm-release comm-release
+sourceroot: comm-esr10 /data/mxr-data/comm-esr10/comm-esr10
+sourceprefix: comm-esr10 comm-esr10
 sourceroot: firefox /data/mxr-data/firefox/mozilla
 sourceprefix: firefox mozilla
 sourceroot: firefox2 /data/mxr-data/firefox2/mozilla
@@ -112,6 +114,8 @@ sourceroot: l10n-mozilla-beta /data/mxr-data/l10n-mozilla-beta/l10n
 sourceprefix: l10n-mozilla-beta l10n
 sourceroot: l10n-mozilla-release /data/mxr-data/l10n-mozilla-release/l10n
 sourceprefix: l10n-mozilla-release l10n
+sourceroot: l10n-mozilla-esr10 /data/mxr-data/l10n-mozilla-esr10/l10n
+sourceprefix: l10n-mozilla-esr10 l10n
 sourceroot: l10n-aviarybranch /data/mxr-data/l10n-aviarybranch/mozilla
 sourceprefix: l10n-aviarybranch l10n
 sourceroot: l10n-mozilla1.8 /data/mxr-data/l10n-mozilla1.8/mozilla
@@ -136,6 +140,8 @@ sourceroot: mozilla-beta /data/mxr-data/mozilla-beta/mozilla-beta
 sourceprefix: mozilla-beta mozilla
 sourceroot: mozilla-release /data/mxr-data/mozilla-release/mozilla-release
 sourceprefix: mozilla-release mozilla
+sourceroot: mozilla-esr10 /data/mxr-data/mozilla-esr10/mozilla-esr10
+sourceprefix: mozilla-esr10 mozilla
 sourceroot: mozilla-central /data/mxr-data/mozilla-central/mozilla-central
 sourceprefix: mozilla-central mozilla
 sourceroot: mozilla-com /data/mxr-data/mozillasvn/svn.mozilla.org/projects/www.mozilla.com
