Misc changes for newer MXR deployment... should have been commited already, not sure why they're not

--- a/lxr.conf
+++ b/lxr.conf
@@ -9,7 +9,11 @@
 
 # Define the base url for the LXR files. Tree name (if any) is appended
 # to this.
-baseurl: http://mxr.mozilla.org/
+# http:// or https:// are omitted because they can cause odd behavior with
+# the port number being appended in situations where the backend server
+# doesn't do the SSL decryption itself.
+# As long as Apache does "SetEnv HTTPS on" in the right place, this works.
+baseurl: mxr.mozilla.org/
 
 # url prefix for bonsai
 bonsaihome: http://bonsai.mozilla.org
