Bug 674657... first attempt to add Chromium to MXR

--- a/lxr.conf
+++ b/lxr.conf
@@ -80,6 +80,8 @@ sourceprefix: build-central build
 alias: build build-central
 sourceroot: camino /data/mxr-data/camino/camino
 sourceprefix: camino camino
+sourceroot: chromium /data/mxr-data/chromium/chromium
+sourceprefix: chromium chromium
 sourceroot: classic /data/mxr-data/classic/mozilla
 sourceprefix: classic mozilla
 sourceroot: comm-central /data/mxr-data/comm-central/comm-central
