--- a/lxr.conf
+++ b/lxr.conf
@@ -106,6 +106,8 @@ sourceroot: firefox2 /data/mxr-data/firefox2/mozilla
 sourceprefix: firefox2 mozilla
 sourceroot: fuel /data/mxr-data/fuel/fuel
 sourceprefix: fuel mozilla/browser/fuel
+sourceroot: gaia /data/mxr/gaia/gaia
+sourceprefix: gaia gaia
 sourceroot: incubator-central /data/mxr-data/incubator-central/incubator
 sourceprefix: incubator-central incubator
 sourceroot: js /data/mxr-data/js/mozilla
