*properly* add gaia

--- a/lxr.conf
+++ b/lxr.conf
@@ -106,7 +106,7 @@ sourceroot: firefox2 /data/mxr-data/firefox2/mozilla
 sourceprefix: firefox2 mozilla
 sourceroot: fuel /data/mxr-data/fuel/fuel
 sourceprefix: fuel mozilla/browser/fuel
-sourceroot: gaia /data/mxr/gaia/gaia
+sourceroot: gaia /data/mxr-data/gaia/gaia
 sourceprefix: gaia gaia
 sourceroot: incubator-central /data/mxr-data/incubator-central/incubator
 sourceprefix: incubator-central incubator
