adding mozilla-esr17 and comm-esr17, thanks to cturra for doing the work

--- a/lxr.conf
+++ b/lxr.conf
@@ -100,6 +100,8 @@ sourceroot: comm-release /data/mxr-data/comm-release/comm-release
 sourceprefix: comm-release comm-release
 sourceroot: comm-esr10 /data/mxr-data/comm-esr10/comm-esr10
 sourceprefix: comm-esr10 comm-esr10
+sourceroot: comm-esr17 /data/mxr-data/comm-esr17/comm-esr17
+sourceprefix: comm-esr17 comm-esr17
 sourceroot: firefox /data/mxr-data/firefox/mozilla
 sourceprefix: firefox mozilla
 sourceroot: firefox2 /data/mxr-data/firefox2/mozilla
@@ -124,6 +126,8 @@ sourceroot: l10n-mozilla-release /data/mxr-data/l10n-mozilla-release/l10n
 sourceprefix: l10n-mozilla-release l10n
 sourceroot: l10n-mozilla-esr10 /data/mxr-data/l10n-mozilla-esr10/l10n
 sourceprefix: l10n-mozilla-esr10 l10n
+sourceroot: l10n-mozilla-esr17 /data/mxr-data/l10n-mozilla-esr17/l10n
+sourceprefix: l10n-mozilla-esr17 l10n
 sourceroot: l10n-aviarybranch /data/mxr-data/l10n-aviarybranch/mozilla
 sourceprefix: l10n-aviarybranch l10n
 sourceroot: l10n-mozilla1.8 /data/mxr-data/l10n-mozilla1.8/mozilla
@@ -150,6 +154,8 @@ sourceroot: mozilla-release /data/mxr-data/mozilla-release/mozilla-release
 sourceprefix: mozilla-release mozilla
 sourceroot: mozilla-esr10 /data/mxr-data/mozilla-esr10/mozilla-esr10
 sourceprefix: mozilla-esr10 mozilla
+sourceroot: mozilla-esr17 /data/mxr-data/mozilla-esr17/mozilla-esr17
+sourceprefix: mozilla-esr17 mozilla
 sourceroot: mozilla-central /data/mxr-data/mozilla-central/mozilla-central
 sourceprefix: mozilla-central mozilla
 sourceroot: mozilla-com /data/mxr-data/mozillasvn/svn.mozilla.org/projects/www.mozilla.com
