--- a/lxr.conf
+++ b/lxr.conf
@@ -156,6 +156,8 @@ sourceroot: mozilla-esr10 /data/mxr-data/mozilla-esr10/mozilla-esr10
 sourceprefix: mozilla-esr10 mozilla
 sourceroot: mozilla-esr17 /data/mxr-data/mozilla-esr17/mozilla-esr17
 sourceprefix: mozilla-esr17 mozilla
+sourceroot: mozilla-b2g18 /data/mxr-data/mozilla-b2g18/mozilla-b2g18
+sourceprefix: mozilla-b2g18 mozilla
 sourceroot: mozilla-central /data/mxr-data/mozilla-central/mozilla-central
 sourceprefix: mozilla-central mozilla
 sourceroot: mozilla-com /data/mxr-data/mozillasvn/svn.mozilla.org/projects/www.mozilla.com
