--- a/lxr.conf
+++ b/lxr.conf
@@ -114,6 +114,8 @@ sourceroot: incubator-central /data/mxr-data/incubator-central/incubator
 sourceprefix: incubator-central incubator
 sourceroot: js /data/mxr-data/js/mozilla
 sourceprefix: js mozilla
+sourceroot: jss /data/mxr-data/jss/mozilla
+sourceprefix: jss jss
 sourceroot: l10n /data/mxr-data/l10n/mozilla
 sourceprefix: l10n l10n
 sourceroot: l10n-central /data/mxr-data/l10n-central/l10n-central
@@ -183,9 +185,15 @@ sourceprefix: mozillasvn-all svn.mozilla.org
 sourceroot: mozillausers-central /data/mxr-data/mozillausers-central/users
 sourceprefix: mozillausers-central mozillausers
 sourceroot: nspr /data/mxr-data/nspr/mozilla
-sourceprefix: nspr mozilla/nsprpub
+sourceprefix: nspr nspr
+sourceroot: nspr-cvs /data/mxr-data/nspr-cvs/mozilla
+sourceprefix: nspr-cvs mozilla/nsprpub
+sourceroot: nss /data/mxr-data/nss/mozilla
+sourceprefix: nss nss
 sourceroot: projects-central /data/mxr-data/projects-central/projects
 sourceprefix: projects-central projects
+sourceroot: python-nss /data/mxr-data/python-nss/mozilla
+sourceprefix: python-nss pyhton-nss
 sourceroot: seamonkey /data/mxr-data/seamonkey/mozilla
 sourceprefix: seamonkey mozilla
 sourceroot: security /data/mxr-data/security/mozilla
