typo in lxr.conf ... pyhton-nss -> python-nss

--- a/lxr.conf
+++ b/lxr.conf
@@ -193,7 +193,7 @@ sourceprefix: nss nss
 sourceroot: projects-central /data/mxr-data/projects-central/projects
 sourceprefix: projects-central projects
 sourceroot: python-nss /data/mxr-data/python-nss/mozilla
-sourceprefix: python-nss pyhton-nss
+sourceprefix: python-nss python-nss
 sourceroot: seamonkey /data/mxr-data/seamonkey/mozilla
 sourceprefix: seamonkey mozilla
 sourceroot: security /data/mxr-data/security/mozilla
