Bug 915890 - Add rust and servo repos

--- a/lxr.conf
+++ b/lxr.conf
@@ -190,12 +190,16 @@ sourceroot: projects-central /data/mxr-data/projects-central/projects
 sourceprefix: projects-central projects
 sourceroot: python-nss /data/mxr-data/python-nss/mozilla
 sourceprefix: python-nss python-nss
+sourceroot: rust /data/mxr-data/rust/rust
+sourceprefix: rust rust
 sourceroot: seamonkey /data/mxr-data/seamonkey/mozilla
 sourceprefix: seamonkey mozilla
 sourceroot: security /data/mxr-data/security/mozilla
 sourceprefix: security mozilla
 sourceroot: services-central /data/mxr-data/services-central/services-central
 sourceprefix: services-central services
+sourceroot: servo /data/mxr-data/servo/servo
+sourceprefix: servo servo
 sourceroot: spreadfirefox /data/mxr-data/mozillasvn/svn.mozilla.org/projects/spreadfirefox.com
 sourceprefix: spreadfirefox spreadfirefox
 sourceroot: tamarin-central /data/mxr-data/tamarin-central/tamarin-central
