Bug 890923 - add mozmill-tests indexing

--- a/lxr.conf
+++ b/lxr.conf
@@ -180,6 +180,8 @@ sourceroot: mozillasvn-all /data/mxr-data/mozillasvn-all/svn.mozilla.org
 sourceprefix: mozillasvn-all svn.mozilla.org
 sourceroot: mozillausers-central /data/mxr-data/mozillausers-central/users
 sourceprefix: mozillausers-central mozillausers
+sourceroot: mozmill-tests /data/mxr-data/mozmill-tests
+sourceprefix: mozmill-tests mozmill-tests
 sourceroot: nspr /data/mxr-data/nspr/mozilla
 sourceprefix: nspr nspr
 sourceroot: nspr-cvs /data/mxr-data/nspr-cvs/mozilla
