Bug 923947 - add comm-esr24

--- a/lxr.conf
+++ b/lxr.conf
@@ -102,6 +102,8 @@ sourceroot: comm-esr10 /data/mxr-data/comm-esr10/comm-esr10
 sourceprefix: comm-esr10 comm-esr10
 sourceroot: comm-esr17 /data/mxr-data/comm-esr17/comm-esr17
 sourceprefix: comm-esr17 comm-esr17
+sourceroot: comm-esr24 /data/mxr-data/comm-esr24/comm-esr24
+sourceprefix: comm-esr24 comm-esr24
 sourceroot: firefox /data/mxr-data/firefox/mozilla
 sourceprefix: firefox mozilla
 sourceroot: firefox2 /data/mxr-data/firefox2/mozilla
