Bug 795709 - add gaia-l10n

--- a/lxr.conf
+++ b/lxr.conf
@@ -112,6 +112,8 @@ sourceroot: fuel /data/mxr-data/fuel/fuel
 sourceprefix: fuel mozilla/browser/fuel
 sourceroot: gaia /data/mxr-data/gaia/gaia
 sourceprefix: gaia gaia
+sourceroot: gaia-l10n /data/mxr-data/gaia-l10n/gaia-l10n
+sourceprefix: gaia-l10n gaia-l10n
 sourceroot: incubator-central /data/mxr-data/incubator-central/incubator
 sourceprefix: incubator-central incubator
 sourceroot: js /data/mxr-data/js/mozilla
