Bug 795709 - add/fix gaia-l10n trees

--- a/lxr.conf
+++ b/lxr.conf
@@ -112,8 +112,6 @@ sourceroot: fuel /data/mxr-data/fuel/fuel
 sourceprefix: fuel mozilla/browser/fuel
 sourceroot: gaia /data/mxr-data/gaia/gaia
 sourceprefix: gaia gaia
-sourceroot: gaia-l10n /data/mxr-data/gaia-l10n/gaia-l10n
-sourceprefix: gaia-l10n gaia-l10n
 sourceroot: incubator-central /data/mxr-data/incubator-central/incubator
 sourceprefix: incubator-central incubator
 sourceroot: js /data/mxr-data/js/mozilla
@@ -124,6 +122,16 @@ sourceroot: l10n /data/mxr-data/l10n/mozilla
 sourceprefix: l10n l10n
 sourceroot: l10n-central /data/mxr-data/l10n-central/l10n-central
 sourceprefix: l10n-central l10n-central
+sourceroot: l10n-gaia /data/mxr-data/l10n-gaia/l10n-gaia
+sourceprefix: l10n-gaia l10n-gaia
+sourceroot: l10n-gaia-v1_0_1 /data/mxr-data/l10n-gaia-v1_1/l10n-gaia-v1_0_1
+sourceprefix: l10n-gaia-v1_0_1 l10n-gaia
+sourceroot: l10n-gaia-v1_1 /data/mxr-data/l10n-gaia-v1_1/l10n-gaia-v1_1
+sourceprefix: l10n-gaia-v1_1 l10n-gaia
+sourceroot: l10n-gaia-v1_2 /data/mxr-data/l10n-gaia-v1_2/l10n-gaia-v1_2
+sourceprefix: l10n-gaia-v1_2 l10n-gaia
+sourceroot: l10n-gaia-v1_3 /data/mxr-data/l10n-gaia-v1_3/l10n-gaia-v1_3
+sourceprefix: l10n-gaia-v1_3 l10n-gaia
 sourceroot: l10n-mozilla-aurora /data/mxr-data/l10n-mozilla-aurora/l10n
 sourceprefix: l10n-mozilla-aurora l10n
 sourceroot: l10n-mozilla-beta /data/mxr-data/l10n-mozilla-beta/l10n
