--- a/lxr.conf
+++ b/lxr.conf
@@ -172,6 +172,8 @@ sourceroot: mozilla-b2g18 /data/mxr-data/mozilla-b2g18/mozilla-b2g18
 sourceprefix: mozilla-b2g18 mozilla
 sourceroot: mozilla-b2g26_v1_2 /data/mxr-data/mozilla-b2g26_v1_2/mozilla-b2g26_v1_2
 sourceprefix: mozilla-b2g26_v1_2 mozilla
+sourceroot: mozilla-b2g28_v1_3 /data/mxr-data/mozilla-b2g28_v1_3/mozilla-b2g28_v1_3
+sourceprefix: mozilla-b2g28_v1_3 mozilla
 sourceroot: mozilla-central /data/mxr-data/mozilla-central/mozilla-central
 sourceprefix: mozilla-central mozilla
 sourceroot: mozilla-com /data/mxr-data/mozillasvn/svn.mozilla.org/projects/www.mozilla.com
