--- a/lxr.conf
+++ b/lxr.conf
@@ -174,6 +174,8 @@ sourceroot: mozilla-b2g26_v1_2 /data/mxr-data/mozilla-b2g26_v1_2/mozilla-b2g26_v
 sourceprefix: mozilla-b2g26_v1_2 mozilla
 sourceroot: mozilla-b2g28_v1_3 /data/mxr-data/mozilla-b2g28_v1_3/mozilla-b2g28_v1_3
 sourceprefix: mozilla-b2g28_v1_3 mozilla
+sourceroot: mozilla-b2g28_v1_3t /data/mxr-data/mozilla-b2g28_v1_3t/mozilla-b2g28_v1_3t
+sourceprefix: mozilla-b2g28_v1_3t mozilla
 sourceroot: mozilla-central /data/mxr-data/mozilla-central/mozilla-central
 sourceprefix: mozilla-central mozilla
 sourceroot: mozilla-com /data/mxr-data/mozillasvn/svn.mozilla.org/projects/www.mozilla.com
