--- a/lxr.conf
+++ b/lxr.conf
@@ -168,6 +168,8 @@ sourceroot: mozilla-esr17 /data/mxr-data/mozilla-esr17/mozilla-esr17
 sourceprefix: mozilla-esr17 mozilla
 sourceroot: mozilla-esr24 /data/mxr-data/mozilla-esr24/mozilla-esr24
 sourceprefix: mozilla-esr24 mozilla
+sourceroot: mozilla-esr31 /data/mxr-data/mozilla-esr31/mozilla-esr31
+sourceprefix: mozilla-esr31 mozilla
 sourceroot: mozilla-b2g18 /data/mxr-data/mozilla-b2g18/mozilla-b2g18
 sourceprefix: mozilla-b2g18 mozilla
 sourceroot: mozilla-b2g26_v1_2 /data/mxr-data/mozilla-b2g26_v1_2/mozilla-b2g26_v1_2
