Bug 1031275 - add mozilla-b2g30_v1_4

--- a/lxr.conf
+++ b/lxr.conf
@@ -178,6 +178,8 @@ sourceroot: mozilla-b2g28_v1_3 /data/mxr-data/mozilla-b2g28_v1_3/mozilla-b2g28_v
 sourceprefix: mozilla-b2g28_v1_3 mozilla
 sourceroot: mozilla-b2g28_v1_3t /data/mxr-data/mozilla-b2g28_v1_3t/mozilla-b2g28_v1_3t
 sourceprefix: mozilla-b2g28_v1_3t mozilla
+sourceroot: mozilla-b2g30_v1_4 /data/mxr-data/mozilla-b2g30_v1_4/mozilla-b2g30_v1_4
+sourceprefix: mozilla-b2g30_v1_4 mozilla
 sourceroot: mozilla-central /data/mxr-data/mozilla-central/mozilla-central
 sourceprefix: mozilla-central mozilla
 sourceroot: mozilla-com /data/mxr-data/mozillasvn/svn.mozilla.org/projects/www.mozilla.com
