--- a/lxr.conf
+++ b/lxr.conf
@@ -176,6 +176,8 @@ sourceroot: mozilla-b2g28_v1_3t /data/mxr-data/mozilla-b2g28_v1_3t/mozilla-b2g28
 sourceprefix: mozilla-b2g28_v1_3t mozilla
 sourceroot: mozilla-b2g30_v1_4 /data/mxr-data/mozilla-b2g30_v1_4/mozilla-b2g30_v1_4
 sourceprefix: mozilla-b2g30_v1_4 mozilla
+sourceroot: mozilla-b2g32_v2_0 /data/mxr-data/mozilla-b2g32_v2_0/mozilla-b2g32_v2_0
+sourceprefix: mozilla-b2g32_v2_0 mozilla
 sourceroot: mozilla-central /data/mxr-data/mozilla-central/mozilla-central
 sourceprefix: mozilla-central mozilla
 sourceroot: mozilla-com /data/mxr-data/mozillasvn/svn.mozilla.org/projects/www.mozilla.com
